# ai-projects-portfolio

./: .gitignore  README.md
data-analysis-ai/: .env.example  .gitignore  CLAUDE.md  README.md  ai_data_analyst.py  coingecko_api.py  crypto_ai_analysis.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  top100_crypto_analysis.py  top100_crypto_chart.py
data-analysis-ai/.claude/: settings.local.json
data-analysis-ai/configs/: config.py
data-analysis-ai/notebooks/: 00_intro.ipynb
data-analysis-ai/scripts/: run_demo.py
data-analysis-ai/src/: coingecko_api.py  crypto_ai_analysis.py  jan31_2025_snapshot.py  real_jan31_historical.py  top100_historical_chart.py
data-analysis-ai/src/common/: __init__.py  io.py  plots.py
data-analysis-ai/tests/: test_analysis.py  test_io.py
deeplearningai_rag/: CLAUDE.md  QUERY_FLOW_ARCHITECTURE.md  RAG_FLOW_TREE.md  pyproject.toml  test_browser.py  test_browser_auto.py  test_console.py  test_debug.html  test_enhanced_rag.py  test_enhanced_rag_simple.py  test_new_chat.py  test_simple.py
deeplearningai_rag/.claude/: settings.local.json
deeplearningai_rag/.claude/commands/: implement-feature.md
deeplearningai_rag/backend/: ai_generator.py  app.py  config.py  evaluation.py  hybrid_search.py  query_enhancer.py  rag_fusion.py  rag_metrics.jsonl  rag_system.py  reranker.py  vector_store.py
deeplearningai_rag/backend/tests/: conftest.py  test_app_integration.py
deeplearningai_rag/frontend/: index.html  script.js  style.css  test.html
notebooks/: claude_notebook_demo.ipynb
